<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="shoppingListHeaderText">買い物リスト</string>
    <string name="shoppingListDeleteButton">削除</string>
    <string name="appName">kanazawaApp-2019</string>
    <string name="foodAdditionHeader">保存食追加</string>
    <string name="foodLimit">期限</string>
    <string name="foodQuantity">数量</string>
    <string name="foodLocation">保存場所</string>
    <string name="commercialFood">市販</string>
    <string name="datePiceker">賞味期限</string>
    <string name="pickerText">Date</string>
    <string name="quantityString">Select number</string>
    <string name="barcodeReading">バーコード読み込み</string>
    <string name="takePicture">写真を撮る</string>
    <string name="usePicture">写真フォルダ</string>
    <string name="app_name">kanazawaApp-2019</string>
    <string name="next">次へ</string>
    <string name="startApp">アプリを始める</string>
    <string name="mainScreenDescription">登録した保存食を\n追加購入まで\n管理するアプリです</string>
    <string name="initialSetting">初期設定</string>
    <string name="numberSetting">人数の設定</string>
    <string name="notificationSetting">通知の設定</string>
    <string name="notificationDescription">一定量備蓄が減ったタイミングで\n購入を促す通知を表示します</string>
    <string name="deadlineNotificationDescription">期限が近づくと消費を促す\n通知を表示します</string>
    <string name="initialSettingDescription">ここでの設定は\n後から変更できます</string>
    <string name="setNumber">人数を設定します</string>
    <string name="childrenHandling">子供1人も1人分として\nカウントします</string>
    <string name="human">人</string>
    <string name="waterUnit">L(飲料水)</string>
    <string name="stapleFoodUnit">食(主食)</string>
    <string name="snackUnit">個(間食)</string>
    <string name="notificationTiming">を下回ったら通知する</string>
    <string name="notificationDateOne">期限切れの</string>
    <string name="notificationDateTwo">日前に通知する</string>
    <string name="welcomeMsg">ようこそ\nStockSupporterへ</string>
    <string name="PreservedFoodsListHeader">保存食一覧</string>
    <string name="gettingStartMainHeader">簡単入門</string>
    <string name="howToAddFoodHeader">保存食追加の仕方</string>
    <string name="howToLookListHeader">リストの見方</string>
    <string name="howToLookFirstScreenHeader">一覧の見方</string>
    <string name="howToNotificationSettingsHeader">通知設定の仕方</string>
    <string name="howToLookShelterHeader">避難所の見方</string>
    <string name="descriptionMsg">このアプリは\nローリングストックを\nサポートするアプリです</string>
    <string name="datePicker">賞味期限</string>
    <string name="indicationStockQuantity">xL(飲料水)\ny食(主食)\nz個(間食)</string>
    <string name="surviveDate">日分(n人分) </string>
    <string name="number">人数</string>
    <string name="notification">通知</string>
    <string name="setting">設定</string>
    <string name="foodList">保存食一覧</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appDescription">登録した保存食を\n追加購入まで\n管理できます。</string>
    <string name="descriptionLastTutorial">わからないことは\n"簡単入門"で確認できます。\nまずは初期設定をしましょう。</string>
    <string name="goToSetting">設定へ</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
