<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/initialSetting"
        app:titleTextColor="@color/colorWhite" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toptoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:title="@string/notificationSetting"
        app:titleTextColor="@color/colorWhite"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/notificationDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/notificationDescription"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toptoolbar" />

    <EditText
        android:id="@+id/savingDays"
        android:layout_width="57dp"
        android:layout_height="32dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/surviveDate"
        app:layout_constraintTop_toBottomOf="@+id/notificationDescription" />

    <TextView
        android:id="@+id/surviveDate"
        android:layout_width="122dp"
        android:layout_height="27dp"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/savingDays"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/savingDays"
        android:text="@string/surviveDate" />

    <TextView
        android:id="@+id/indicationStockQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savingDays"
        android:text="@string/indicationStockQuantity" />

    <TextView
        android:id="@+id/notificationTiming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicationStockQuantity"
        android:text="@string/notificationTiming" />

    <TextView
        android:id="@+id/deadlineNotificationDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationTiming"
        android:text="@string/deadlineNotificationDescription" />

    <TextView
        android:id="@+id/notificationDateOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/notificationDate"
        app:layout_constraintEnd_toStartOf="@+id/notificationDate"
        app:layout_constraintTop_toTopOf="@+id/notificationDate"
        android:text="@string/notificationDateOne" />

    <TextView
        android:id="@+id/notificationDateTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/notificationDate"
        app:layout_constraintStart_toEndOf="@+id/notificationDate"
        app:layout_constraintTop_toTopOf="@+id/notificationDate"
        android:text="@string/notificationDateTwo" />

    <EditText
        android:id="@+id/notificationDate"
        android:layout_width="71dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadlineNotificationDescription" />

    <TextView
        android:id="@+id/nextBtnLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:outlineProvider="none"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/moveNextBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_rounded"
        android:backgroundTint="@color/colorPrimary"
        android:backgroundTintMode="multiply"
        android:onClick="toNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90"
        app:layout_constraintWidth_max="240dp"
        app:layout_constraintWidth_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>