<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/notificationDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/notificationDescription"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <EditText
            android:id="@+id/savingDays"
            android:layout_width="57dp"
            android:layout_height="35dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toStartOf="@+id/surviveDate"
            app:layout_constraintTop_toBottomOf="@+id/notificationDescription" />

        <TextView
            android:id="@+id/surviveDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:gravity="center"
            android:text="@string/surviveDate"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="@+id/savingDays"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/savingDays" />

        <TextView
            android:id="@+id/indicationStockQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/indicationStockQuantity"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/savingDays" />

        <TextView
            android:id="@+id/notificationTiming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/notificationTiming"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/indicationStockQuantity" />

        <TextView
            android:id="@+id/deadlineNotificationDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/deadlineNotificationDescription"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notificationTiming" />

        <TextView
            android:id="@+id/notificationDateOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/notificationDate"
            app:layout_constraintEnd_toStartOf="@+id/notificationDate"
            app:layout_constraintTop_toTopOf="@+id/notificationDate"
            android:text="@string/notificationDateOne" />

        <TextView
            android:id="@+id/notificationDateTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/notificationDateTwo"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/notificationDate"
            app:layout_constraintStart_toEndOf="@+id/notificationDate"
            app:layout_constraintTop_toTopOf="@+id/notificationDate" />

        <EditText
            android:id="@+id/notificationDate"
            android:layout_width="71dp"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deadlineNotificationDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
